# aurorite

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/ISSUE_TEMPLATE/: bug-issue.md  feature_request.md
.github/workflows/: cargo-test.yml  rust.yml
assets/meta/: hello.txt
aurorite-arps/: Cargo.toml  test.tar
aurorite-arps/src/: common.rs  exporter.rs
aurorite-arps/tests/: export.rs
aurorite-server/: Cargo.toml
aurorite-server/src/database/: dyndata.rs
aurorite-server/src/database/models/: background.rs  mod.rs  race.rs
aurorite-server/src/responses/: character.rs
aurorite-server/src/routes/: characters.rs  mod.rs
crates/aurorite-agsp/: Cargo.toml
crates/aurorite-agsp/src/: checksum.rs  common.rs  exporter.rs  importer.rs  lib.rs  loader.rs
crates/aurorite-agsp/src/tests/: fs.rs
crates/aurorite-agsp/tests/: export.rs  import.rs
crates/aurorite-dataflow/: Cargo.toml
crates/aurorite-dataflow/src/: enums.rs  lib.rs  state.rs
crates/aurorite-dataflow/src/database/: mod.rs
crates/aurorite-dataflow/src/database/models/: background.rs  campaign.rs  character.rs  class.rs  client.rs  item.rs  mod.rs  race.rs  scene.rs  spell.rs
crates/aurorite-dataflow/src/dto/: background.rs  campaign.rs  character.rs  class.rs  client.rs  mod.rs  race.rs  scene.rs  spell.rs
crates/aurorite-runtime/: Cargo.toml
crates/aurorite-runtime/src/: character.rs  events.rs  lib.rs  runtime.rs  scene.rs  spell.rs  state.rs
crates/aurorite-runtime/src/nodes/: dice.rs  mod.rs  rand.rs
crates/aurorite-server/: Cargo.toml
crates/aurorite-server/src/: config.rs  enums.rs  extractors.rs  main.rs  state.rs  traits.rs
crates/aurorite-server/src/database/: dyndata.rs
crates/aurorite-server/src/database/models/: asset.rs  campaign.rs  character.rs  class.rs  client.rs  item.rs  mod.rs  race.rs  scene.rs
crates/aurorite-server/src/requests/: background.rs  campaign.rs  character.rs  class.rs  client.rs  mod.rs  roll.rs  session.rs
crates/aurorite-server/src/responses/: background.rs  campaign.rs  character.rs  class.rs  client.rs  common.rs  mod.rs  race.rs  roll.rs  session.rs
crates/aurorite-server/src/responses/character/: mod.rs  parts.rs  stats.rs
crates/aurorite-server/src/routes/: agsp.rs  backgrounds.rs  campaigns.rs  characters.rs  classes.rs  client.rs  mod.rs  rolls.rs  session.rs
crates/aurorite-server/src/routes/session/: characters.rs  mod.rs  root.rs
crates/aurorite-server/src/session/: character.rs  handler.rs  messages.rs  mod.rs  scene.rs
crates/aurorite-server/src/tests/: api_auth.rs  api_campaign.rs  api_common.rs  api_rolls.rs  mod.rs  utils.rs  uuid.rs
crates/aurorite-server/src/utils/: auth.rs  formulas.rs  jwt.rs  mod.rs  uuid.rs
crates/aurorite-util/: Cargo.toml
crates/aurorite-util/src/: auth.rs  common.rs  config.rs  formulas.rs  jwt.rs  lib.rs  uuid.rs
src/: config.rs  extractors.rs  main.rs  state.rs  traits.rs
src/database/: character.rs  class.rs  classes.rs  dyndata.rs  mod.rs  origin.rs  script.rs
src/database/models/: character.rs  class.rs  client.rs  mod.rs  race.rs  script.rs  spell.rs
src/requests/: client.rs
src/responses/: character.rs  client.rs  common.rs  mod.rs
src/routes/: characters.rs  client.rs  mod.rs
src/tests/: api_auth.rs  api_common.rs  mod.rs  uuid.rs
src/utils/: auth.rs  formulas.rs  jwt.rs  mod.rs  uuid.rs
ui/: components.json  nuxt.config.ts  package-lock.json  package.json
ui/app/: RegisterPage.vue  app.vue  error.vue
ui/app/assets/css/: tailwind.css
ui/app/components/ui/input/: Input.vue
ui/app/layouts/: default.vue
ui/app/pages/: index.vue
ui/app/stores/: AuthenticationStore.js  authenticationStore.ts
ui/i18n/: i18n.config.ts
ui/i18n/locales/: en.json  loader.ts  ru.json  ru.ts
