[package]
name = "aurorite"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["http2", "macros", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.0", features = ["fs", "macros", "parking_lot", "rt-multi-thread", "signal", "tracing"] }
tracing = "0.1.44"
vismut-core = { git = "https://github.com/justxale/vismut-core.git", version = "0.1.0", features = ["nodes", "serde"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "timeout", "trace"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dotenvy = "0.15.7"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
jsonwebtoken = "10.3.0"
argon2 = { version = "0.5.3", features = ["std"] }
toasty = { version = "0.4.0", features = ["jiff", "serde", "sqlite"] }
jiff = "0.2.24"
