[package]
name = "aurorite-agsp"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
astral-tokio-tar = "0.6.1"
async-compression = { version = "0.4.42", features = ["tokio", "zstd"] }
const-hex = "1.19.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["fs"] }
toml = "1.1.2"
tracing = "0.1.44"
uuid = { version = "1.23.1", features = ["serde", "v7"] }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["fs", "macros", "rt"] }
tracing-test = { version = "0.2.6", features = ["no-env-filter"] }
