[package]
name = "aurorite-dataflow"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toasty = { version = "0.7.0", features = ["jiff", "serde", "sqlite"] }
uuid = { version = "1.23.1" }
jiff = { version = "0.2.24", features = ["serde"] }
aurorite-util = { path = "../aurorite-util" }
