[package]
name = "aurorite-server"
version = "0.1.0"
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.8.9", features = ["http2", "macros", "multipart", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.0", features = ["fs", "macros", "parking_lot", "rt-multi-thread", "signal", "tracing"] }
tracing = "0.1.44"
aurorite-agsp = { path = "../aurorite-agsp" }
aurorite-dataflow = { path = "../aurorite-dataflow" }
aurorite-runtime = { path = "../aurorite-runtime" }
aurorite-util = { path = "../aurorite-util" }
uuid = { version = "1.23.1", features = ["serde"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["fs", "timeout", "trace"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
jiff = { version = "0.2.24", features = ["serde"] }
dotenvy = "0.15.7"
tracing-appender = "0.2.5"
tokio-util = { version = "0.7.18", features = ["compat", "io"] }
dashmap = { version = "7.0.0-rc2", features = ["inline-more"] }
serde_json = "1.0.150"
futures-util = "0.3.32"
parking_lot = { version = "0.12.5" }

[dev-dependencies]
http-body-util = "0.1.3"
tracing-test = { version = "0.2.6", features = ["no-env-filter"] }