[package]
name = "aurorite-util"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
config = "0.15.23"
serde = { version = "1.0.228", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
jiff = "0.2.24"
argon2 = { version = "0.5.3", features = ["std"] }
uuid = { version = "1.23.1", features = ["serde"] }
fastrand = "2.4.1"