[package]
name = "aurorite-util"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
jiff = "0.2.24"
argon2 = { version = "0.5.3", features = ["simple", "std"] }
uuid = { version = "1.23.1", features = ["serde", "v7"] }
fastrand = "2.4.1"
config = { version = "0.15.23", default-features = false }

[dev-dependencies]
serde_json = "1.0.150"
